--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+A rebuild of custom dwm w/ following patches:
+warp, 
+uselessgaps, 
+swallow, 
+xrdb,
+status2d-systray, 
+ewmhtags,
+urgbordercolor,
+truecentertitle,
+totami 
+
 dwm - dynamic window manager
 ============================
 dwm is an extremely fast, small, and dynamic window manager for X.
