--- a/README
+++ b/README
@@ -7,7 +7,8 @@ status2d-systray,
 ewmhtags,
 urgbordercolor,
 truecentertitle,
-totami 
+totami,
+switchtags
 
 dwm - dynamic window manager
 ============================
